--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4Q//drDLiVHcpd+Ip2E5b",
+      "authorship_tag": "ABX9TyOetOgABD8WfC6Dn8PqFuMb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1249,7 +1249,7 @@
         "  #reward model here is Sentiment Score of the story from the story dataset\n",
         "  #so it is RLVR = Policy Model(Pre-Trained) + Policy Model(SFT) + Using Reward Model (in this case using Positive Reward Analyzer as reward model)..\n",
         "  #.. to train the model on human preferences\n",
-        "  ref_model = copy.deepcopy(model)\n",
+        "  ref_model = copy.deepcopy(model) #original mini-gpt model\n",
         "  ref_model.requires_grad(False) #why as we want the policy model weights to not change\n",
         "  ref_model.eval()\n",
         "\n",
@@ -1269,21 +1269,23 @@
         "\n",
         "  print(\"Starting RL training loop...\")\n",
         "  for i in range(num_iters):\n",
-        "    with torch.nograd():\n",
+        "    with torch.nograd(): #don't train the model\n",
         "      model.eval()\n",
-        "      completion = model.generate(prompt,140,temperature = 1.0 , do_sample= True,top_k=30)\n",
+        "      completion = model.generate(prompt,140,temperature = 1.0 , do_sample= True,top_k=30) #sampling trajectories\n",
         "      model.train()\n",
         "      rewards = reward_model(completion)\n",
         "      ref_log_probs = ref_model.log_probs(completion[:,:1], completion[:,1:])\n",
         "\n",
-        "    log_probs = model.log_probs(completion[:,:1], completion[:,1:])\n",
-        "    kl = log_probs - ref_log_probs\n",
+        "    log_probs = model.log_probs(completion[:,:1], completion[:,1:]) #log probs of at/st (action given state) from trajectories\n",
+        "    kl = log_probs - ref_log_probs # take KL divergence between the Policy Model (min-gpt pretrained on tinystories) + Ref Model(min-gpt)\n",
         "    # the score is a combination of the reward and KL penalty to prevent the model from deviating too far from the reference\n",
-        "    score = rewards[:,None] - kl_beta*kl\n",
-        "    score = score.detach()\n",
+        "    score = - kl_beta*kl\n",
+        "    score += rewards[:,None]\n",
+        "    score.detach()\n",
         "\n",
         "    #vanilla policy gradient loss\n",
         "    pg_loss = -torch.mean(score*log_probs)\n",
+        "    #torch.mean = summation of (sampling from i.n samples and then taking t=0 .. t=T trajectories . reward score and log probs is log_probs of at/st policy model)\n",
         "    loss = pg_loss\n",
         "    loss.backward()\n",
         "    torch.nn.utils.clip_grad_norm_(model.parameters(), grad_norm_clip)\n",
