--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOetOgABD8WfC6Dn8PqFuMb",
+      "authorship_tag": "ABX9TyM/DyhjqNQUWxD98396+P3G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1001,20 +1001,28 @@
         "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
         "from torch.utils.data import Dataset\n",
         "from torch.utils.data.dataloader import DataLoader\n",
-        "\n",
         "import sys\n",
-        "# Install mingpt using pip\n",
         "!pip install mingpt\n",
         "\n",
         "from mingpt.model import GPT\n",
         "#from mingpt.char_tokenizer import CharTokenizer\n",
-        "#from mingpt.logger import Logger\n",
-        "from mingpt.model import GPT\n",
+        "from mingpt.logger import Logger\n",
         "from mingpt.trainer import Trainer\n",
         "from mingpt.utils import set_seed"
       ],
       "metadata": {
         "id": "maOJCAZPk1Y0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip intall mingpt.model"
+      ],
+      "metadata": {
+        "id": "lk7n3ps50pGy"
       },
       "execution_count": null,
       "outputs": []
@@ -1028,14 +1036,11 @@
         "from torch.utils.data.dataloader import DataLoader\n",
         "\n",
         "import sys\n",
-        "# Install mingpt using pip\n",
-        "!pip install mingpt\n",
-        "\n",
         "from mingpt.model import GPT\n",
         "#from mingpt.char_tokenizer import CharTokenizer\n",
         "#from mingpt.logger import Logger\n",
         "from mingpt.model import GPT\n",
-        "from mingpt.trainer import Trainer\n",
+        "#from mingpt.trainer import Trainer\n",
         "from mingpt.utils import set_seed\n",
         "\n",
         "class CharTokenizer():\n",
@@ -1061,12 +1066,13 @@
       "metadata": {
         "id": "jWQFFVmqr1wo"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Re-import the Trainer class from the modified file\n",
         "class StoryDataset(Dataset):\n",
         "  \"\"\"TinyStories Dataset https://huggingface.co/datasets/roneneldan/TinyStories\"\"\"\n",
         "\n",
@@ -1129,7 +1135,7 @@
         "    attn_mask = x ==self.tokenizer.pad_token #attention should not be paid to pad_token\n",
         "    return x, y ,attn_mask #returns input , output and attn_mask\n",
         "\n",
-        "class SentimentRewardModel():\n",
+        "class SentimentRewardModel(): #verifiable reward as we are using a tool to give rewards.\n",
         "  def __init__(self,tokenizer):\n",
         "    self.tokenizer = tokenizer\n",
         "    self.sid = SentimentIntensityAnalyzer()\n",
@@ -1202,7 +1208,7 @@
         "      valid_ds,\n",
         "      shuffle=False,\n",
         "      batch_size=trainer.config.batch_size*2,\n",
-        "      num_workers=train_config.num_workers,\n",
+        "      num_workers=train_config.num_workers\n",
         "  )\n",
         "  trainer.set_callback(\"on_batch_end\", batch_end_callback)\n",
         "  trainer.run()\n",
@@ -1273,7 +1279,7 @@
         "      model.eval()\n",
         "      completion = model.generate(prompt,140,temperature = 1.0 , do_sample= True,top_k=30) #sampling trajectories\n",
         "      model.train()\n",
-        "      rewards = reward_model(completion)\n",
+        "      rewards = reward_model(completion) # we want the policy mode\n",
         "      ref_log_probs = ref_model.log_probs(completion[:,:1], completion[:,1:])\n",
         "\n",
         "    log_probs = model.log_probs(completion[:,:1], completion[:,1:]) #log probs of at/st (action given state) from trajectories\n",
