--- a/Handlingclassimbalance.ipynb
+++ b/Handlingclassimbalance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrKXcWI7BM8kEgNDXFarrj",
+      "authorship_tag": "ABX9TyMlImZSecKdA0JRp4awv5dE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -562,6 +562,19 @@
       ],
       "metadata": {
         "id": "mKy6X_mHDG15"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Entropy and Cross Entropy\n",
+        "#entropy is the measure of uncertainity in a true probability distribution\n",
+        "#cross entropy is the measure of uncertaining in the ditribution given a target distribution\n"
+      ],
+      "metadata": {
+        "id": "TPeHcff_k3Hn"
       },
       "execution_count": null,
       "outputs": []
