--- a/Handlingclassimbalance.ipynb
+++ b/Handlingclassimbalance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlImZSecKdA0JRp4awv5dE",
+      "authorship_tag": "ABX9TyPiDAyFqnN0SStWEo3AgdDA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -571,7 +571,28 @@
       "source": [
         "#Entropy and Cross Entropy\n",
         "#entropy is the measure of uncertainity in a true probability distribution\n",
-        "#cross entropy is the measure of uncertaining in the ditribution given a target distribution\n"
+        "#cross entropy is the measure of uncertaining in the ditribution given a target distribution\n",
+        "#uncertainity in model prediction and hence we need to reduce that.... through Bayesian Models or thru Confidence intervals....\n",
+        "#or calibrating the classification probabilities like in Recommender Systems\n",
+        "#or in LLM , LLMs  reducing uncertainity by using temperature scaling (adjust SoftMax probabilities)\n",
+        "#uncertainity can be due to noise in data or due to lack of knowledge of data(rare or unseen inputs)\n",
+        "#Aleatoric and Epistemic Uncertainity - Aleatoric uncertainity can't be reduced and Epistemic can be reduced\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "def compute(p_logits, q_logits):\n",
+        "  p_probs = F.softmax(p_logits, dim = -1)\n",
+        "  q_probs = F.softmax(q_logits, dim = -1)\n",
+        "\n",
+        "  #entropy of p\n",
+        "  entropy = -torch.sum(p_probs * torch.log(p_probs + 1e-10), dim = -1)\n",
+        "\n",
+        "  #cross entropy\n",
+        "  cross_entropy = -torch.sum(p_probs * torch.log(q_probs + 1e-10), dim = -1)\n",
+        "\n",
+        "  return entropy, cross_entropy\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "TPeHcff_k3Hn"
