--- a/Handlingclassimbalance.ipynb
+++ b/Handlingclassimbalance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiDAyFqnN0SStWEo3AgdDA",
+      "authorship_tag": "ABX9TyNaI+gpCQLMBgrtecSVxc3b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -590,12 +590,21 @@
         "  #cross entropy\n",
         "  cross_entropy = -torch.sum(p_probs * torch.log(q_probs + 1e-10), dim = -1)\n",
         "\n",
-        "  return entropy, cross_entropy\n",
-        "\n",
-        "\n"
+        "  return entropy, cross_entropy"
       ],
       "metadata": {
         "id": "TPeHcff_k3Hn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sample code for data / feature drift\n"
+      ],
+      "metadata": {
+        "id": "SXQlSuSxBLsK"
       },
       "execution_count": null,
       "outputs": []
