--- a/Handlingclassimbalance.ipynb
+++ b/Handlingclassimbalance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNaI+gpCQLMBgrtecSVxc3b",
+      "authorship_tag": "ABX9TyNcf/hn/Xd4ql0qZWka6jlg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -601,10 +601,34 @@
     {
       "cell_type": "code",
       "source": [
-        "#sample code for data / feature drift\n"
+        "#handling feature drift use PSI\n",
+        "import warnings\n",
+        "import pandas\n",
+        "import numpy as np\n",
+        "\n",
+        "#PSI formula\n",
+        "#divide the data into bins and then calculat the PSI\n",
+        "#if PSI <0.1 suggests no significant shift\n",
+        "#if 0.1<=PSI<=0.25 suggests a moderate shift\n",
+        "#if PSI >0.25 suggests a significant shift\n",
+        "\n",
+        "def calculate(expected , observed , bins=10):\n",
+        "  #bin the data\n",
+        "  expected_counts , bin_edges = np.histogram(expected, bins = bins , range = (0,1))\n",
+        "  observed_counts , _ = np.histogram(observed, bins = bin_edges, range = (0,1))\n",
+        "  #calculate the proportions of observations in each bin\n",
+        "  expected_proportions = expected_counts / sum(expected)\n",
+        "  observed_proportions = observed_counts / sum(observed)\n",
+        "  #replace 0s with a small number to avoid division by zero in PSI calculation\n",
+        "  expected_proportions = np.where(expected_proportions == 0, 1e-10, expected_proportions)\n",
+        "  observed_proportions = np.where(observed_proportions == 0, 1e-10, observed_proportions)\n",
+        "  #calculate PSI\n",
+        "  psi_values = np.sum((observed_proportions - expected_proportions) * np.log(observed_proportions / expected_proportions))\n",
+        "  psi = sum(psi_values)\n",
+        "  return psi\n"
       ],
       "metadata": {
-        "id": "SXQlSuSxBLsK"
+        "id": "HOmzk66oBdwa"
       },
       "execution_count": null,
       "outputs": []
