--- a/Handlingclassimbalance.ipynb
+++ b/Handlingclassimbalance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcf/hn/Xd4ql0qZWka6jlg",
+      "authorship_tag": "ABX9TyODyCkU7t/Ozc+mA5zgoO5B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -603,8 +603,12 @@
       "source": [
         "#handling feature drift use PSI\n",
         "import warnings\n",
-        "import pandas\n",
+        "import pandas as pd\n",
         "import numpy as np\n",
+        "\n",
+        "#PSI IS better than KS Test\n",
+        "#PSI is applicable for categorical data as well where categories can be done i\n",
+        "\n",
         "\n",
         "#PSI formula\n",
         "#divide the data into bins and then calculat the PSI\n",
@@ -612,23 +616,107 @@
         "#if 0.1<=PSI<=0.25 suggests a moderate shift\n",
         "#if PSI >0.25 suggests a significant shift\n",
         "\n",
+        "#PSI for numerical or continuous variables\n",
         "def calculate(expected , observed , bins=10):\n",
         "  #bin the data\n",
         "  expected_counts , bin_edges = np.histogram(expected, bins = bins , range = (0,1))\n",
         "  observed_counts , _ = np.histogram(observed, bins = bin_edges, range = (0,1))\n",
         "  #calculate the proportions of observations in each bin\n",
-        "  expected_proportions = expected_counts / sum(expected)\n",
-        "  observed_proportions = observed_counts / sum(observed)\n",
+        "  expected_proportions = expected_counts / sum(expected_counts) # corrected\n",
+        "  observed_proportions = observed_counts / sum(observed_counts) # corrected\n",
         "  #replace 0s with a small number to avoid division by zero in PSI calculation\n",
         "  expected_proportions = np.where(expected_proportions == 0, 1e-10, expected_proportions)\n",
         "  observed_proportions = np.where(observed_proportions == 0, 1e-10, observed_proportions)\n",
         "  #calculate PSI\n",
-        "  psi_values = np.sum((observed_proportions - expected_proportions) * np.log(observed_proportions / expected_proportions))\n",
-        "  psi = sum(psi_values)\n",
-        "  return psi\n"
+        "  psi_values = (observed_proportions - expected_proportions) * np.log(observed_proportions / expected_proportions) # corrected\n",
+        "  psi = sum(psi_values) # corrected\n",
+        "  return psi\n",
+        "\n",
+        "# Example usage with dummy data\n",
+        "investor_pre_pandemic = np.random.rand(1000) # Example data\n",
+        "investors_during_pandemic = np.random.rand(5000) # Example data\n",
+        "\n",
+        "psi = calculate(investor_pre_pandemic, investors_during_pandemic)\n",
+        "print(f\"PSI is: {psi}\")\n",
+        "\n",
+        "if psi <0.1:\n",
+        "  print(\"no significant shift\")\n",
+        "elif 0.1<=psi<=0.25:\n",
+        "  print(\"moderate shift\")\n",
+        "else:\n",
+        "  print(\"significant shift\")\n",
+        "\n",
+        "print(psi)"
       ],
       "metadata": {
-        "id": "HOmzk66oBdwa"
+        "id": "HOmzk66oBdwa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7f7dea20-625e-4cba-dbe7-616aad794d0e"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "PSI is: 0.015443884367169048\n",
+            "no significant shift\n",
+            "0.015443884367169048\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#psi for categorical variables\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "def calculate_categorical_psi(expected , actual):\n",
+        "  expected_dist = pd.series(expected).value_counts(normalize = True)\n",
+        "  actual_dist = pd.series(actual).value_counts(normalize = True)\n",
+        "  #align categories\n",
+        "  all_categories = set(expected_dist.index).union(set(actual_dist.index))\n",
+        "  psi_total = 0\n",
+        "  for category in all_categories:\n",
+        "    if category in expected_dist and category in actual_dist:\n",
+        "      psi_total += (expected_dist[category] - actual_dist[category]) * np.log(expected_dist[category] / actual_dist[category])\n",
+        "  return psi_total"
+      ],
+      "metadata": {
+        "id": "DpMKUW1wLNC8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#KS test for Data Drift\n",
+        "#p_value > alpha(assuming alpha =0.05) - significant drift in distribution . data drift might have occured\n",
+        "#p_value < alpha(assuming alpha = 0.5) - data drift might not have occured\n",
+        "\n",
+        "pre_pandemic =df[df['Month'] <= 12]['Investors']\n",
+        "during_pandemic =df[df['Month'] > 12]['Investors']\n",
+        "\n",
+        "#Perform KS Test\n",
+        "ks_stat , p_value = ks_2samp(pre_pandemic, during_pandemic)\n",
+        "\n",
+        "print(f\"KS Statistic: {ks_stat}\")\n",
+        "print(f\"p-value: {p_value}\")\n",
+        "\n",
+        "#interpret the p-value\n",
+        "alpha = 0.05 #set a signifance threshold\n",
+        "if p_value > alpha:\n",
+        "  print(\"No significant drift in distribution\")\n",
+        "else:\n",
+        "  print(\"Significant drift in distribution\")\n"
+      ],
+      "metadata": {
+        "id": "h7tD59h8FaLy"
       },
       "execution_count": null,
       "outputs": []
