--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMAOiero6m4RE3Mbfq1QHlg",
+      "authorship_tag": "ABX9TyN5+SfXwVJ2cIHRfNitzvPe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -968,6 +968,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "GRPO - Additional losses can be added along with the KL divergence loss.\n",
+        "GRPO - Group here refers to group of answers or responses for a prompt. THIS IS KEY for better human preference alignment\n",
+        "GRPO - All the rewards etc and final optimization is done at group level"
+      ],
+      "metadata": {
+        "id": "P2O6VSn0nao4"
+      }
     },
     {
       "cell_type": "markdown",
