--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5+SfXwVJ2cIHRfNitzvPe",
+      "authorship_tag": "ABX9TyPx16m21NdJc2/+PL0pz2jn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1318,6 +1318,133 @@
       ],
       "metadata": {
         "id": "H0MG8KE2meWr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#reward model loss function call\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "from torch.nn import functional as F\n",
+        "\n",
+        "class RewardModel(nn.Module): #define the nn for reward model\n",
+        "  def __init__(self):\n",
+        "    super.__init__()\n",
+        "  def forward(self,r_chosen,r_rejected):\n",
+        "    #forward pass for calculating the scalar value of reward\n",
+        "    #input is  a tensor of size [B] -batch_size\n",
+        "    delta = r_chosen - r_rejected #shape of tensor [B]\n",
+        "    loss = -F.logsigmoid(delta).mean\n",
+        "    return loss\n",
+        "#training loop\n",
+        "model = RewardModel()\n",
+        "r_chosen = model(prompt, chosen) #shape[B,T]\n",
+        "r_rejected = model(prompt, rejected) #shape[B,T]\n",
+        "\n",
+        "#backward pass\n",
+        "loss.backward() #torch calculates gradients and update gradients for both chosen and rejected rewards in one go ...\n",
+        "optimizer.step()\n",
+        "optimizer.zero_grad()"
+      ],
+      "metadata": {
+        "id": "PaimuCp7HRXD"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#openrlhf code for training a RLHF model\n",
+        "import wandb\n",
+        "wandb.login(key = \"b281e20d5ef0492c9dc7371d0ccf59fd8dfeb619\")\n"
+      ],
+      "metadata": {
+        "id": "UKUAhOSixRKM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install --upgrade datasets\n",
+        "!pip install openrlhf\n",
+        "!pip install openrlhf[vllm]"
+      ],
+      "metadata": {
+        "id": "w4h3GjaM0pwy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from datasets import load_dataset\n",
+        "import os\n",
+        "N_TRAIN = 1600\n",
+        "N_TEST = 160\n",
+        "SEED = 42\n",
+        "\n",
+        "#load and shuffle the test\n",
+        "full = load_dataset(\"OpenRLHF/prompt-collection-v0.1\", split = \"train\")\n",
+        "full = full.shuffle(seed = SEED)\n",
+        "\n",
+        "train_dataset = full.select(range(N_TRAIN))\n",
+        "test_dataset = full.select(range(N_TEST))\n",
+        "#save to disk\n",
+        "train_dataset.save_to_disk(\"train\")\n",
+        "test_dataset.save_to_disk(\"test\")\n",
+        "print(f\"Saved {len(train_dataset)} train examples\")\n",
+        "print(f\"Saved {len(test_dataset)} test examples\")"
+      ],
+      "metadata": {
+        "id": "9gND11Mi1RPC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from datasets import load_from_disk\n",
+        "#load dataset from disk\n",
+        "train_dataset_path = \"/content/train\"\n",
+        "train_dataset = load_from_disk(train_dataset_path)\n",
+        "\n",
+        "#select and display an example prompt\n",
+        "#dataset is in a col format / parquet file and we need to accesss that direclty with a subscript....\n",
+        "#what dataset object returns is a array\n",
+        "if len(train_dataset)>0:\n",
+        "  example_prompt = train_dataset[2]\n",
+        "  print(\"Example Prompt\",example_prompt)\n",
+        "else:\n",
+        "  print(\"the training dataset is empty\")"
+      ],
+      "metadata": {
+        "id": "9qAGuGVt3DGQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "#train the SFT / Ref model on this dataset\n",
+        "#PPO trainig requires four models\n",
+        "1. Reward Model (not trained using PPO)\n",
+        "2. Policy Model(SFT trained and then using PPO )\n",
+        "3. Ref Model (not trained):(intialized from SFT model)\n",
+        "4. Value Model\n",
+        "\"\"\"\n"
+      ],
+      "metadata": {
+        "id": "fea5_Er15fc-"
       },
       "execution_count": null,
       "outputs": []
