--- a/Autonomous_Agent_LangGraph.ipynb
+++ b/Autonomous_Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOr4/cLNdsbl6wRDQ8mJiC",
+      "authorship_tag": "ABX9TyOLrKZrHJYHJgs8ULECxIgF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,10 +78,13 @@
         "# Wrap it with ChatHuggingFace\n",
         "llm = ChatHuggingFace(llm=llm)\n",
         "\n",
+        "\n",
+        "\n",
         "#model_name = \"meta-llama/Llama-2-7b-chat-hf\" # Example: Replace with your desired Llama model\n",
         "#model = AutoModelForCausalLM.from_pretrained(model_name)\n",
         "#pipe = pipeline(\"text-generation\", model=model, tokenizer=tokenizer, max_new_tokens=100)\n",
         "#llm = HuggingFacePipeline(pipeline=pipe)\n",
+        "\n",
         "\n",
         "#llm = ChatOpenAI(model=\"meta-llama/Llama-3.1-8B-Instruct\", temperature=0)\n",
         "#define the agent state\n",
@@ -778,9 +781,7 @@
         "    )\n",
         "    return response.choices[0].message.content\n",
         "  def parse_response(self):\n",
-        "    response = self.llm_call()\n",
-        "\n",
-        "\n"
+        "    response = self.llm_call()\n"
       ],
       "metadata": {
         "id": "oOggRK934o2b"
