--- a/Autonomous_Agent_LangGraph.ipynb
+++ b/Autonomous_Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLrKZrHJYHJgs8ULECxIgF",
+      "authorship_tag": "ABX9TyOEPzX92APmmDmiw6v4cGJQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -771,6 +771,8 @@
         "\n",
         "    \"\"\"\n",
         "    self.history = [{\"role\":\"system\",\"content\":self.system_prompt}]\n",
+        "    # this list is used for appending user message , tools and LLM generation ....this is memory for this session or else use mem0\n",
+        "\n",
         "\n",
         "  def llm_call(self):\n",
         "    response = self.client.chat.completions.create(\n",
@@ -781,7 +783,9 @@
         "    )\n",
         "    return response.choices[0].message.content\n",
         "  def parse_response(self):\n",
-        "    response = self.llm_call()\n"
+        "    response = self.llm_call()\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "oOggRK934o2b"
