--- a/Autonomous_Agent_LangGraph.ipynb
+++ b/Autonomous_Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEPzX92APmmDmiw6v4cGJQ",
+      "authorship_tag": "ABX9TyPYW60AfyjecOXUH0yjQ74i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -771,8 +771,7 @@
         "\n",
         "    \"\"\"\n",
         "    self.history = [{\"role\":\"system\",\"content\":self.system_prompt}]\n",
-        "    # this list is used for appending user message , tools and LLM generation ....this is memory for this session or else use mem0\n",
-        "\n",
+        "    # this is memory for a session .... else use mem0\n",
         "\n",
         "  def llm_call(self):\n",
         "    response = self.client.chat.completions.create(\n",
