--- a/moviepredictionusingDCNv2.ipynb
+++ b/moviepredictionusingDCNv2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORj8dkx0HIxvo5yf/CZ/gg",
+      "authorship_tag": "ABX9TyOSMpJ0Jqf3EBcipO2tvk6o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -123,7 +123,7 @@
         "    def __init__(self, input_dim):\n",
         "        super(CrossLayerV2, self).__init__()\n",
         "        self.input_dim = input_dim\n",
-        "        self.weight = nn.Parameter(torch.randn(input_dim, input_dim))\n",
+        "        self.weight = nn.Parameter(torch.randn(input_dim, input_dim)) #intialize the weight with a random value\n",
         "        self.bias = nn.Parameter(torch.zeros(input_dim)) # Bias should be a vector\n",
         "\n",
         "    def forward(self, x0, xl):\n",
