--- a/RecommendationEngine_TwoTower_Ranker_Using_LLM.ipynb
+++ b/RecommendationEngine_TwoTower_Ranker_Using_LLM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMBS415IEUusW3fK3DsYrz",
+      "authorship_tag": "ABX9TyNAQfMwCI6P3jVSYB9CNxqj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -905,7 +905,7 @@
       "metadata": {
         "id": "MOch3kBRiFjo"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -955,7 +955,7 @@
         "    except Exception as e:\n",
         "        print(f\"\\nError during prediction: {e}\")"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -965,6 +965,65 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Scaffolding code for fine tuning a LLM on Multiobjective\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "\n",
+        "class MutliObjectiveModel(nn.Module):\n",
+        "\n",
+        "  def __init__(self,foundation_model,hidden_dim,dropout=0.1):\n",
+        "    super().__init__()\n",
+        "    self.foundation_model = foundation_model # foundation model to be trained for Retreival and Ranking\n",
+        "    self.dropout = nn.Dropout(dropout)\n",
+        "    #projection layer for query item interaction as we need this in foundational model\n",
+        "    self.query_proj = nn.Linear(hidden_dim,hidden_dim)\n",
+        "    self.item_proj = nn.Linear(hidden_dim,hidden_dim)\n",
+        "    #multi task head\n",
+        "    self.click_head = nn.Linear(hidden_dim,1)\n",
+        "    self.cart_head = nn.Linear(hidden_dim,1)\n",
+        "    self.purchase_head = nn.Linear(hidden_dim,1)\n",
+        "\n",
+        "  def forward(self,query_input , item_input):\n",
+        "    #encode query\n",
+        "    query_embeddings = self.foundation_model.encode(query_input)\n",
+        "    #encode item\n",
+        "    item_embeddings = self.foundation_model.encode(item_input)\n",
+        "    #project query and item embeddings\n",
+        "    query_embeddings = self.query_proj(query_embeddings)\n",
+        "    item_embeddings = self.item_proj(item_embeddings)\n",
+        "\n",
+        "    #interaction between user and item\n",
+        "    interaction = torch.mul(query_embeddings,item_embeddings)\n",
+        "\n",
+        "    #apply dropout\n",
+        "    x = self.dropout(interaction)\n",
+        "\n",
+        "    #multi task head\n",
+        "    click_logits = torch.sigmoid(self.click_head(x))\n",
+        "    cart_logits = torch.sigmoid(self.cart_head(x))\n",
+        "    purchase_logits = torch.sigmoid(self.purchase_head(x))\n",
+        "\n",
+        "    return {\n",
+        "        \"click_logits\":click_logits.squeeze(-1),\n",
+        "        \"cart_logits\":cart_logits.squeeze(-1),\n",
+        "        \"purchase_logits\":purchase_logits.squeeze(-1)\n",
+        "    }\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "eGYh4bLM39qz"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
