--- a/RecommendationEngine_TwoTower_Ranker_Using_LLM.ipynb
+++ b/RecommendationEngine_TwoTower_Ranker_Using_LLM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOe8r2wO5NBGfRTahtMtOaD",
+      "authorship_tag": "ABX9TyP4VPrSmUMi2x0a0cjp5brs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1016,6 +1016,49 @@
       ],
       "metadata": {
         "id": "eGYh4bLM39qz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def multi_task_bce_loss(pred,labels, weights):\n",
+        "  loss_click = F.binary_cross_entropy(pred[\"click_logits\"],labels[\"clicks\"])\n",
+        "  loss_cart = F.binary_cross_entropy(pred[\"cart_logits\"],labels[\"cart\"])\n",
+        "  loss_purchase = F.binary_cross_entropy(pred[\"purchase_logits\"],labels[\"purchase\"])\n",
+        "  total_loss =(\n",
+        "      weights[\"clicks\"] * loss_click +\n",
+        "      weights[\"cart\"] * loss_cart +\n",
+        "      weights[\"purchase\"] * loss_purchase\n",
+        "  )\n",
+        "  return total_loss"
+      ],
+      "metadata": {
+        "id": "yh4BXC0IAhdw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#training code snippet\n",
+        "model = MutliObjectiveModel(foundation_model=\"Qwen3.0 7B Instruct Model\",hidden_dim=768)\n",
+        "optimizer = torch.optim.AdamW(model.parameters(),lr=3e-5)\n",
+        "weights = {\"clicks\":0.3,\"cart\":0.3,\"purchase\":0.4}\n",
+        "for batch in dataloader:\n",
+        "  query_input = batch[\"query\"]\n",
+        "  item_input = batch[\"item\"]\n",
+        "  labels = batch[\"labels\"]\n",
+        "  outputs = model(query_input,item_input)\n",
+        "  loss = multi_task_bce_loss(pred,labels,weights) #loss is defined seprately .....\n",
+        "  loss.backward()\n",
+        "  optimizer.step()\n",
+        "  optimizer.zero_grad()"
+      ],
+      "metadata": {
+        "id": "-lHmfV6y-9Fu"
       },
       "execution_count": null,
       "outputs": []
