--- a/RecommendationEngine_TwoTower_Ranker_Using_LLM.ipynb
+++ b/RecommendationEngine_TwoTower_Ranker_Using_LLM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4VPrSmUMi2x0a0cjp5brs",
+      "authorship_tag": "ABX9TyNndH3vZB/MWWSIzWgo7wHG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -995,6 +995,8 @@
         "    item_embeddings = self.foundation_model.encode(item_input)\n",
         "    #project query and item embeddings\n",
         "    query_embeddings = self.query_proj(query_embeddings)\n",
+        "    #projecting to ensure that query and item embeddings are of same dimensionality and hence resulting to lesser noise in dot product\n",
+        "    #the layers are trainable and hence resulting to better retreival\n",
         "    item_embeddings = self.item_proj(item_embeddings)\n",
         "\n",
         "    #interaction between user and item\n",
