--- a/RecommendationEngine_TwoTower_Ranker_Using_LLM.ipynb
+++ b/RecommendationEngine_TwoTower_Ranker_Using_LLM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNndH3vZB/MWWSIzWgo7wHG",
+      "authorship_tag": "ABX9TyOsO1nkYfs6bqeY5N+PP6p/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -995,15 +995,13 @@
         "    item_embeddings = self.foundation_model.encode(item_input)\n",
         "    #project query and item embeddings\n",
         "    query_embeddings = self.query_proj(query_embeddings)\n",
-        "    #projecting to ensure that query and item embeddings are of same dimensionality and hence resulting to lesser noise in dot product\n",
-        "    #the layers are trainable and hence resulting to better retreival\n",
         "    item_embeddings = self.item_proj(item_embeddings)\n",
         "\n",
         "    #interaction between user and item\n",
         "    interaction = torch.mul(query_embeddings,item_embeddings)\n",
         "\n",
         "    #apply dropout\n",
-        "    x = self.dropout(interaction)\n",
+        "    x = self.dropout(interaction) #act as regularizer so model is not overfitting on interaction ->>>> KEY KEY\n",
         "\n",
         "    #multi task head\n",
         "    click_logits = torch.sigmoid(self.click_head(x))\n",
@@ -1057,7 +1055,8 @@
         "  loss = multi_task_bce_loss(pred,labels,weights) #loss is defined seprately .....\n",
         "  loss.backward()\n",
         "  optimizer.step()\n",
-        "  optimizer.zero_grad()"
+        "  optimizer.zero_grad()\n",
+        ""
       ],
       "metadata": {
         "id": "-lHmfV6y-9Fu"
