--- a/Coding_Agent.ipynb
+++ b/Coding_Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiRjX/QGFZ70s920zwe2ZR",
+      "authorship_tag": "ABX9TyOcZo7z3g1Avb3beDTQLOde",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,6 +43,90 @@
         "#code for FIM\n",
         "import numpy as np\n",
         "import functools\n",
+        "\n",
+        "@functools.lru_cache(maxsize=None)\n",
+        "def get_fim_token_ids(tokenizer):\n",
+        "  if \"codellama\" in tokenizer.name_or_path:\n",
+        "    return (\n",
+        "        tokenizer.bos_token_id,\n",
+        "        tokenizer.suffix_id\n",
+        "        tokenizer.prefix_id\n",
+        "        tokenizer.middle_id,\n",
+        "        0,\n",
+        "    )\n",
+        "  elif \"deepseek-coder\" in tokenizer.name_or_path:\n",
+        "    return (\n",
+        "        tokenizer.bos_token_id,\n",
+        "        tokenizer.encode(\"<|fim_hole|>\",add_special_tokens=False)[0],\n",
+        "        tokenizer.encode(\"<|fim_begin|>\",add_special_tokens=False)[0],\n",
+        "        tokenizer.encode(\"<|fim_end|>\",add_special_tokens=False)[0],\n",
+        "        tokenizer.encode(\"<pad>\",add_special_tokens=False)[0],\n",
+        "        )\n",
+        "  elsif \"stable_code\" in tokenizer.name_or_path:\n",
+        "    return (\n",
+        "        tokenizer.bos_token_id,\n",
+        "        tokenizer.encode(\"<fim_suffix>\")[0],\n",
+        "        tokenizer.encode(\"<fim_prefix>\")[0],\n",
+        "        tokenizer.encode(\"<fim_middle>\")[0],\n",
+        "        tokenizer.encode(\"<pad>\")[0],\n",
+        "        )\n",
+        "  else:\n",
+        "    bos_token_id = None\n",
+        "    try:\n",
+        "      FIM_PREFiX , FIM_MIDDLE , FIM_SUFFIX,FIM_PAD = tokenizer.special_tokens_map[\"additional_special_tokens\"][1:5]\n",
+        "      suffix_tok_id , prefix_tok_id , middle_tok_id , pad_tok_id = (\n",
+        "          tokenizer.vocab[tok] for tok in [FIM_SUFFIX,FIM_PREFIX,FIM_MIDDLE,FIM_PAD]\n",
+        "      )\n",
+        "    except KeyError:\n",
+        "      suffix_tok_id , prefix_tok_id , middle_tok_id , pad_tok_id = (None, None, None, None)\n",
+        "    return bos_token_id,suffix_tok_id,prefix_tok_id,middle_tok_id,pad_tok_id\n",
+        "\n",
+        "def _bos_token_processing(prefix_token_list, bos_token):\n",
+        "  if bos_token is not None:\n",
+        "    prefix_token_list.append(bos_token)\n",
+        "  return prefix_token_list\n",
+        "\n",
+        "def permute(\n",
+        "    sample,\n",
+        "    np_rng,\n",
+        "    suffix_token_id,\n",
+        "    prefix_token_id,\n",
+        "    middle_token_id,\n",
+        "    pad_token_id,\n",
+        "    fim_rate=0.5,\n",
+        "    fim_spm_rate=0.5,\n",
+        "    truncate_or_pad=True,\n",
+        "    bos_token_id=None,\n",
+        "):\n",
+        "\"\"\" Take in sample (list of tokens) and perform a FIM transaction on it with a probability of fim_rate , using two FIM modes:\n",
+        "PSM and SPM(with a probability of fim_spm_rate)\n",
+        "\"\"\"\n",
+        "  if np_rng.binomial(1,fim_rate):\n",
+        "    boundaries = list(np_rng.gradient(low=0,high=len(sample)+1,size=2))\n",
+        "    boundaries.sort()\n",
+        "    prefix = np.array(sample[:boundaries[0]],dtype = np.int64)\n",
+        "    middle = np.array(sample[boundaries[0]:boundaries[1]],dtype = np.int64)\n",
+        "    suffix = np.array(sample[boundaries[1]:],dtype = np.int64)\n",
+        "\n",
+        "  if truncate_or_pad:\n",
+        "    new_length = suffix.shape[0] + prefix.shape[0] + middle.shape[0] +3\n",
+        "    diff = new_length - len(sample)\n",
+        "    if diff>0:\n",
+        "      if suffix.shape[0] <=diff:\n",
+        "        return sample,np_rng\n",
+        "      suffix = np.concatenate([suffix,np.full(-1*diff),pad_tok_id])\n",
+        "  if np_rng.binomial(1,fim_spm_rate):\n",
+        "    prefix_special_tokens = _bos_token_processing([prefix_tok_id,suffix_tok_id],bos_token_id)\n",
+        "    #SPM variant 2 of FIM paper\n",
+        "    new_sample = np.concatenate([prefix_special_tokens,suffix,[middle_tok_id],prefix,middle])\n",
+        "  else:\n",
+        "    prefix_special_tokens = _bos_token_processing([prefix_tok_id],bos_token_id)\n",
+        "    #PSM variant of FIM paper\n",
+        "    new_sample = np.concatenate([prefix_special_tokens,prefix,[suffix_tok_id],suffix,[middle_tok_id],middle])\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n"
       ],
