--- a/Agent_LangGraph.ipynb
+++ b/Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPfVh7XPgESh6veLMhq83TR",
+      "authorship_tag": "ABX9TyNIGJNpBiqd7RI1pLjUb9C9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,9 @@
       "source": [
         "#building agents from scratch .by god's grace. Jai Shri Ram . Jai Bajrangbali\n",
         "#building agents using MCP Protcol\n",
+        "#extending the agent to react and using memory in this -> using langmem sdk from langrapgh -> 1102\n",
         "#https://www.youtube.com/watch?v=aHCDrAbH_go&t=120s - LangGraph\n",
+        "#https://www.analyticsvidhya.com/blog/2025/03/langmem-sdk/ - Analytics Vidhya\n",
         "!pip install langchain_core langchain-anthropic langgraph"
       ]
     },
@@ -557,6 +559,15 @@
       ],
       "metadata": {
         "id": "zlbibCL6_cLK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lFITbowO2wdd"
       },
       "execution_count": null,
       "outputs": []
