--- a/Agent_LangGraph.ipynb
+++ b/Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIGJNpBiqd7RI1pLjUb9C9",
+      "authorship_tag": "ABX9TyNwwGvHMKUIXPmYlQgR/DS6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -565,9 +565,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#start code for React Agent using LT memory ....\n",
+        "#ST Memory - In session can be handled via State but LT memory we need mem0 or something\n",
+        "#we will build the code using mem0 also\n",
+        "!pip install langchain langchain_core langgraph langmem mcp\n"
+      ],
       "metadata": {
         "id": "lFITbowO2wdd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "4v0UWhUL5aql"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "OIuiKyzp5Twx"
       },
       "execution_count": null,
       "outputs": []
